ansi2/src/snapshots/ansi2__test__base-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Color8(
                    Black,
                ),
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Black,
                ),
                bold: false,
                blink: false,
                text: "l",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Black,
                ),
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Black,
                ),
                bold: false,
                blink: false,
                text: "c",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Black,
                ),
                bold: false,
                blink: false,
                text: "k",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "r",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "i",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "g",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "h",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "t",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "l",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "c",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    BrightBlack,
                ),
                bold: false,
                blink: false,
                text: "k",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "l",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "c",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "k",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "r",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "i",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "g",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "h",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "t",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "l",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "c",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    BrightBlack,
                ),
                color: Default,
                bold: false,
                blink: false,
                text: "k",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
        ],
    ],
    w: 48,
    h: 1,
}
