ansi2/src/snapshots/ansi2__test__base-3.snap
---
source: ansi2/src/lib.rs
expression: canvas.minify()
---
[
    [
        Node {
            bg_color: Default,
            color: Color8(
                Black,
            ),
            bold: false,
            blink: false,
            text: "black",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: "    ",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
        Node {
            bg_color: Default,
            color: Color8(
                BrightBlack,
            ),
            bold: false,
            blink: false,
            text: "bright black",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: "     ",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
        Node {
            bg_color: Color8(
                Black,
            ),
            color: Default,
            bold: false,
            blink: false,
            text: "black",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: "    ",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
        Node {
            bg_color: Color8(
                BrightBlack,
            ),
            color: Default,
            bold: false,
            blink: false,
            text: "bright black",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
    ],
]
