ansi2/src/snapshots/ansi2__test__color24.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Token {
            sgr: ColorForeground(
                Rgb(
                    0,
                    0,
                    114,
                ),
            ),
            range: (
                0,
                15,
            ),
        },
    ],
)
