ansi2/src/snapshots/ansi2__test__color256-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Color256(
                    99,
                ),
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Color256(
                    99,
                ),
                color: Color256(
                    99,
                ),
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
        ],
    ],
    w: 3,
    h: 1,
}
