ansi2/src/snapshots/ansi2__test__color256.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Token {
            sgr: ColorForeground(
                Color256(
                    99,
                ),
            ),
            range: (
                0,
                10,
            ),
        },
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                10,
                11,
            ),
        },
        Token {
            sgr: ColorBackground(
                Color256(
                    99,
                ),
            ),
            range: (
                11,
                21,
            ),
        },
        Token {
            sgr: Char(
                'b',
            ),
            range: (
                21,
                22,
            ),
        },
    ],
)
