ansi2/src/snapshots/ansi2__test__dim-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "N",
                dim: true,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "U",
                dim: true,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "S",
                dim: true,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "H",
                dim: true,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "E",
                dim: true,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "L",
                dim: true,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "L",
                dim: true,
                italic: false,
                underline: false,
                hide: false,
            },
        ],
    ],
    w: 8,
    h: 1,
}
