ansi2/src/snapshots/ansi2__test__dim-3.snap
---
source: ansi2/src/lib.rs
expression: canvas.minify()
---
[
    [
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: "NUSHELL",
            dim: true,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
        },
    ],
]
