ansi2/src/snapshots/ansi2__test__empty_link-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "]",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    1,
                    2,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "8",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    2,
                    3,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: ";",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    3,
                    4,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: ";",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    4,
                    5,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "\\",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    6,
                    7,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
        ],
    ],
    w: 6,
    h: 1,
}
